--- a/src/scss/font.sass
+++ b/src/scss/font.sass
@@ -3,6 +3,10 @@ $l: NotoSans-Light
 $i: NotoSans-Italic
 $icon: ionicons
 
+// ===========================================================
+// NotoSans FONTS
+// ===========================================================
+
 $font-list: $b $l $i
 
 =font-includ
@@ -13,7 +17,13 @@ $font-list: $b $l $i
 
 +font-includ
 
+// ===========================================================
+// END NotoSans FONTS
+// ===========================================================
 
+// ===========================================================
+// ionicons FONT
+// ===========================================================
 
 $icon-list: $icon
 
@@ -28,3 +38,7 @@ $icon-list: $icon
 
 
 +font-icon-includ
+
+// ===========================================================
+// END ionicons FONT
+// ===========================================================
