--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,19 +10,22 @@
 
 
 
-@import "modules/slick";
+//@import "modules/slick";
 //@import "modules/ionicons";
+
+
 @import "modules/fancybox";
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Mulish:wght@500&display=swap');
+//@import '@splidejs/splide/css';
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Nunito+Sans:wght@800&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css');
 //@import url('https://awakendhltstg.wpengine.com/wp-content/plugins/vimeo-sync-memberships/css/rvs-user-styles.css?ver=5.3.9');
 //@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css');
 
 :root {
-  --r: 'RoxboroughCF';
   --l: 'Lato';
-  --m: 'Mulish';
-  --hi: 'HelveticaNeue-LightItalic';
+  --n: 'Nunito Sans';
 }
 
 
@@ -48,31 +51,32 @@ h1, h2, b, h3, h4, h5, button, label{
 
 @mixin wid($size) {
    @if $size == 1500 {
-    @media (min-width: 1500px) { @content; }
+    @media (min-width: 1500px) { @content; 
+     content: '1500px > ';  }
   } @else if $size == 1200-1499 {
-    @media (min-width: 1200px) and (max-width: 1499px) { @content; }
+    @media (min-width: 1200px) and (max-width: 1499px) { @content;  content: '1200-1499'; }
   } @else if $size == 1200 {
-    @media (min-width: 1200px) { @content; }
+    @media (min-width: 1200px) { @content;  content: '1200 > ';  }
   } @else if $size == 992-1199 {
-    @media (min-width: 992px) and (max-width: 1199px) { @content; }
+    @media (min-width: 992px) and (max-width: 1199px) { @content; content: '992-1199'; }
   } @else if $size == 992-1300 {
-    @media (min-width: 992px) and (max-width: 1130px) { @content; }
+    @media (min-width: 992px) and (max-width: 1130px) { @content; content: '992-1300';  }
   } @else if $size == 992{
-    @media (min-width: 992px) { @content; }
+    @media (min-width: 992px) { @content; content: '992 > ';  }
   } @else if $size == 991 {
-    @media (max-width: 991px) { @content; }
+    @media (max-width: 991px) { @content; content: '991 < '; }
   } @else if $size == 601-991 {
-    @media (min-width: 601px) and (max-width: 991px) { @content; }
+    @media (min-width: 601px) and (max-width: 991px) { @content; content: '601-991'; }
   } @else if $size == 600 {
-    @media (max-width: 600px) { @content; }
+    @media (max-width: 600px) { @content; content: '600 > '; }
   }@else if $size == 500 {
-    @media (max-width: 500px) { @content; }
+    @media (max-width: 500px) { @content; content: '500 > '; }
   }@else if $size == 450 {
-    @media (max-width: 450px) { @content; }
+    @media (max-width: 450px) { @content; content: '450 > '; }
   }@else if $size == 400 {
-    @media (max-width: 400px) { @content; }
+    @media (max-width: 400px) { @content; content: '400 > '; }
   }@else if $size == 350 {
-    @media (max-width: 350px) { @content; }
+    @media (max-width: 350px) { @content; content: '350 > '; }
   }
 }
 
@@ -99,7 +103,6 @@ h1, h2, b, h3, h4, h5, button, label{
 // ===========================================================
 // END Media
 // ===========================================================
-
 
 // ===========================================================
 // Before and After
@@ -164,34 +167,96 @@ h1, h2, b, h3, h4, h5, button, label{
 // END Button ALL
 // ===========================================================
 
-
-
-
 .orange{
     
   @extend %button;
   
-    background: #E55D45;
+background: linear-gradient(180deg, #E46928 0%, #E45F19 100%);
     box-shadow: 20px 20px 60px rgba(229, 93, 69, 0.6);
-    border-radius: 100px;
   
     color: #fff;
-    font:  700 14px/1.2em var(--l);
+    font: 700 15px/1.2em var(--l);
 
-    width: clamp(150px, 100vw, 150px);
-    height: 44px;
+    width: 100%;
+    max-width: 350px;
+    height: 52px;
+  text-transform: uppercase;
   
 
     &:hover{
-        background: #d65640;
-    box-shadow: 20px 20px 60px rgba(229, 93, 69, 0.8);
+        background:   linear-gradient(180deg, #E45F19 0%, #E46928 100%);
+    box-shadow: 20px 20px 60px rgba(228, 95, 25, 0.47);
     }
   
 
     &:focus,
     &:active {
-        background: #d65640;
-    box-shadow: 20px 20px 60px rgba(229, 93, 69, 0.8);
+        background:   linear-gradient(180deg, #E45F19 0%, #E46928 100%);
+    box-shadow: 20px 20px 60px rgba(228, 95, 25, 0.47);
+    }
+    
+}
+
+.grey{
+    
+  @extend %button;
+  
+background: #F1F4F8;
+//    box-shadow: 20px 20px 60px rgba(229, 93, 69, 0.6);
+
+  
+    color: #000;
+    font:  700 15px/1.2em var(--l);
+
+    width: 200px;
+    height: 52px;
+  text-transform: uppercase;
+  
+
+    &:hover{
+    background: #963d0e;
+      color: #fff;
+    box-shadow: 20px 20px 60px rgba(230, 108, 44, 0.22);
+    }
+  
+
+    &:focus,
+    &:active {
+    background: #963d0e;
+      color: #fff;
+    box-shadow: 20px 20px 60px rgba(230, 108, 44, 0.22);
+    }
+    
+}
+.grey_big{
+    
+  @extend %button;
+  
+background: #F1F4F8;
+//    box-shadow: 20px 20px 60px rgba(229, 93, 69, 0.6);
+
+  
+    color: #1E2B3C;
+    font:  700 15px/1.2em var(--l);
+  
+    text-transform: uppercase;
+
+    width: 344px;
+    height: 52px;
+  
+
+    &:hover{
+    background: #963d0e;
+      color: #fff;
+    box-shadow: 20px 20px 60px rgba(230, 108, 44, 0.22);
+    }
+  
+
+    &:focus,
+    &:active {
+    background: #963d0e;
+      color: #fff;
+    box-shadow: 20px 20px 60px rgba(230, 108, 44, 0.22);
     }
     
 }
@@ -232,275 +297,6 @@ h1, h2, b, h3, h4, h5, button, label{
 // Scroll BAR
 // =========================================================== 
 
-// ===========================================================
-// SLICK SLIDER STYLE
-// ===========================================================
-
-    .slick-slider {
-      position: relative;
-      display: block;
-      width: 100%;
-    }
-
-    .slick-list {
-      position: relative;
-      display: block;
-      overflow: hidden;
-      margin: 0 !important;
-      padding: 0 !important;
-
-      &:focus {
-        outline: none;
-      }
-
-      &.dragging {
-        cursor: pointer;
-        cursor: hand;
-      }
-    }
-
-    .slick-slider {
-      .slick-track,
-      .slick-list {
-      }
-    }
-
-    .slick-track {
-      position: relative;
-      top: 0;
-      left: 0;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-
-      &:before {
-        display: table;
-        content: "";
-      }
-
-      &:after {
-        display: table;
-        content: "";
-        clear: both;
-      }
-    }
-
-    .slick-loading .slick-track {
-      visibility: hidden;
-    }
-
-    .slick-slide {
-      display: none;
-      float: left;
-      height: 100%;
-      min-height: 1px;
-    }
-
-    [dir="rtl"] .slick-slide {
-      float: right;
-    }
-
-    .slick-slide {
-      img {
-        display: block;
-      }
-
-      &.slick-loading img {
-        display: none;
-      }
-
-      &.dragging img {
-        pointer-events: none;
-      }
-    }
-
-    .slick-initialized .slick-slide {
-      display: block;
-    }
-
-    .slick-loading .slick-slide {
-      visibility: hidden;
-    }
-
-    .slick-vertical .slick-slide {
-      display: block;
-      height: auto;
-      border: 1px solid transparent;
-    }
-
-    .slick-arrow {
-      &.slick-hidden {
-        display: none;
-      }
-
-      position: absolute;
-      top: 50%;
-      transform: translate(0, -50%);
-      font-size: 25px;
-      z-index: 3;
-    }
-
-    .slick-slider {
-    //  .ion-chevron-right {
-    //    right: 10px;
-    //  }
-    //
-    //  .ion-chevron-left {
-    //    left: 10px;
-    //  }
-    }
-
-      .slick-dots{
-        display: flex;
-        justify-content: center;
-        margin-bottom: 10px;
-        margin-top: 50px;
-
-        li{
-          width: 10px;
-          height: 10px;
-          background: #D1C8B6;
-          border-radius: 50%;
-          margin: 0px 3.5px;
-          cursor: pointer;
-          &.slick-active{
-                 background: #000; 
-          }
-        }
-
-        button{
-          display: none;
-        }
-
-      }
-
-      .block__slider {
-          display: none;
-      }
-
-      div.slick-slider.slick-initialized {
-          display: block;
-      }
-
-      .slick-arrow {
-          position: absolute;
-          top: 50%;
-          transform: translate(0, -50%);
-          font-size: 25px;
-          z-index: 3;
-      }
-
-      .slick-slider .ion-chevron-right {
-          right: 0;
-      }
-
-      .slick-slider .ion-chevron-left {
-          left: 0;
-      }
-
-
-
-
-
-
-
-
-  .slick-dots{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-    margin-top: 50px;
-    
-    li{
-      width: 10px;
-      height: 10px;
-      background: #e8d7ac;
-      border-radius: 50%;
-      margin: 0px 3.5px;
-      cursor: pointer;
-      opacity: .8;
-      
-      transition: all .7s ease;
-      &.slick-active{
-        opacity: 1;
-             background: #5d4060; 
-        box-shadow: 0 0 15px #5d4060;
-      }
-    }
-    
-    button{
-      display: none;
-    }
-    
-  }
-
-    .block__slider {
-        display: none !important;
-    }
-
-    div.slick-slider.slick-initialized {
-        display: block !important;
-      
-      opacity: 1;
-    }
-
-    .slick-arrow {
-        position: absolute;
-        top: 50%;
-        transform: translate(0, -50%);
-        font-size: 25px;
-        z-index: 3;
-    }
-
-    .slick-slider .ion-chevron-right {
-        right: 0;
-    }
-
-    .slick-slider .ion-chevron-left {
-        left: 0;
-    }
-
-
-.box__arrow{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-  a{
-    position: relative;
-    display: flex;
-    
-    &.prev__{
-      &:before{
-        @extend %bef-aft;
-
-//        background: url(../img/arrow.svg) no-repeat;
-        width: 18px;
-        height: 34px;
-      }
-      
-      
-    }
-    &.next__{
-      &:before{
-        @extend %bef-aft;
-
-//        background: url(../img/arrow.svg) no-repeat;
-        width: 18px;
-        height: 34px;
-           transform: scaleX(-1);
-      }
-    }
-  }
-}
-
-//  
-//}
-
-// ===========================================================
-// END SLICK STYLE
-// ===========================================================
-
 
 // ===========================================================
 // MENU
@@ -516,7 +312,31 @@ h1, h2, b, h3, h4, h5, button, label{
 // ===========================================================
 
 // ===========================================================
-// cursor
+// END cursor
+// ===========================================================
+
+// ===========================================================
+// VIDEO
+// ===========================================================
+
+  video{
+          position: absolute;
+          min-height: 100%;
+          min-width: 100%;
+          object-fit: cover;
+          pointer-events: none;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+  }
+  
+// ===========================================================
+// END VIDEO
 // ===========================================================
 
 
@@ -544,42 +364,42 @@ h1, h2, b, h3, h4, h5, button, label{
 // Scroll Style
 // ===========================================================
 
-//*::-webkit-scrollbar{
-//	background: none;
-//	background-color: none;
-//    box-shadow: none;
-//}
+    *::-webkit-scrollbar{
+      background: none;
+      background-color: none;
+        box-shadow: none;
+    }
 
-//*::-webkit-scrollbar-thumb{
-//	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-//    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-//	background-color: #F5F5F5;
-//	border-radius: 10px;
-//}
+    *::-webkit-scrollbar-thumb{
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      background-color: #F5F5F5;
+      border-radius: 10px;
+    }
 
-//---------------------------------------------------------------------
+//    ---------------------------------------------------------------------
 
-//    *::-webkit-scrollbar {
-//      display: none;
-//    }
-//
-//    *::-webkit-scrollbar {
-//        width: 10px;
-//      opacity: 0;
-//      transition: all .7s ease;
-//
-//    }
+        *::-webkit-scrollbar {
+          display: none;
+        }
 
-//*::-webkit-scrollbar-track {
-////    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-////    border-radius: 10px;
-//}
+        *::-webkit-scrollbar {
+            width: 10px;
+          opacity: 0;
+          transition: all .7s ease;
 
-//*::-webkit-scrollbar-thumb:hover {
-//    opacity: 1;
-//    border-radius: 10px;
-//    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-//}
+        }
+
+    *::-webkit-scrollbar-track {
+    //    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    //    border-radius: 10px;
+    }
+
+    *::-webkit-scrollbar-thumb:hover {
+        opacity: 1;
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    }
 
 // ===========================================================
 // END Scroll Style
